--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /*
-Author:
-Date:
+Author: Aaron Hare
+Date:9/24/2024
 File Name: styles.css
 */
 /* CSS Reset */
@@ -24,6 +24,23 @@ img, video {
 /* Style rule for box sizing applies to all elements */
 * {
   box-sizing: border-box;
+}
+
+/* Style rules for skip navigation link */
+.skip {
+  position: absolute;
+  left: -999px;
+}
+
+.skip:focus {
+  color: #000;
+  background-color: #fff;
+  text-decoration: none;
+  padding: 0.5%;
+  top: auto;
+  left: auto;
+  right: 1px;
+  z-index: 1;
 }
 
 /* Style rules for mobile viewport */
@@ -212,16 +229,29 @@ form #submit {
 }
 
 /* Style rules for footer content */
-footer p {
+footer .copyright {
   font-size: 0.75em;
   text-align: center;
   color: #fff;
-  padding: 0 1em;
+  padding: 2% 4%;
+  float: left;
+  width: 75%;
 }
 
 footer p a {
   color: #fff;
   text-decoration: none;
+}
+
+.social {
+  float: right;
+  width: 20%;
+  padding: 2%;
+}
+
+.social img {
+  display: inline-block;
+  padding: 5%;
 }
 
 /* Media Query for Tablet Viewport */
